Fixed scrollbar

--- a/frontend/src/css/_dashboard.scss
+++ b/frontend/src/css/_dashboard.scss
@@ -5,8 +5,6 @@
   text-align: center;
 }
 
-
-
 .widget {
   background-color: $widget-background;
   border-radius: 10px;
@@ -14,6 +12,16 @@
   margin-left: 80px;
   padding: 20px;
   height: 100%;
+}
+
+.widget::-webkit-scrollbar {
+  width:15px; // manage scrollbar width here
+}
+.widget::-webkit-scrollbar * {
+  background:transparent; // manage scrollbar background color here
+}
+.widget::-webkit-scrollbar-thumb {
+  background:rgba(255,0,0,0.1) !important; // manage scrollbar thumb background color here
 }
 
 .clock {
